# CrabServe

./: Cargo.toml  README.md
examples/: hello_world.rs  response.rs
src/: db.rs  lib.rs  request.rs  server.rs
src/database/: db.rs  mod.rs  mongodb.rs
src/http_core/: http_types.rs  mod.rs  request.rs  response.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs  route.rs
src/router/: mod.rs  route.rs  router.rs
tests/: request_test.rs  server_development.rs
