[package]
name = "CrabServe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
mongodb = "*"
async-trait = "0.1.80"
