workspace = { members = ["src/macros"] }
[package]
name = "CrabServe"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro = { path = "./src/marcos"}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "signal"] }
mongodb = "*"
async-trait = "0.1.80"
log = "0.4.22"
thiserror = "1.0.61"
quote = "1.0.36"
syn = "2.0.68"
